hphp/test/zend/bad/ext/pdo/tests/bug_44861.php.skipif
<?php # vim:ft=php
if (!extension_loaded('pdo')) die('skip');
$dir = getenv('REDIR_TEST_DIR');
if (false == $dir) die('skip no driver');
$allowed = array('oci', 'pgsql');
$ok = false;
foreach ($allowed as $driver) {
	if (!strncasecmp(getenv('PDOTEST_DSN'), $driver, strlen($driver))) {
		$ok = true;
	}
}
if (!$ok) {
	die("skip Scrollable cursors not supported");
}
require_once $dir . 'pdo_test.inc';
PDOTest::skip();
?>